--- a/package.json
+++ b/package.json
@@ -8,23 +8,25 @@
     "build": "tsc -b && vite build",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "maplibre-gl": "^4.7.1",
-    "@mapbox/mapbox-gl-draw": "^1.4.3",
-    "geotiff": "^2.1.3",
     "@deck.gl/core": "^9.0.35",
     "@deck.gl/layers": "^9.0.35",
-    "@deck.gl/mapbox": "^9.0.35"
+    "@deck.gl/mapbox": "^9.0.35",
+    "@mapbox/mapbox-gl-draw": "^1.4.3",
+    "fzstd": "^0.1.1",
+    "geotiff": "^2.1.3",
+    "maplibre-gl": "^4.7.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/mapbox__mapbox-gl-draw": "^1.4.8",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@types/mapbox__mapbox-gl-draw": "^1.4.8",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
@@ -35,6 +37,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vitest": "^4.0.16"
   }
 }
