--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@deck.gl/core": "^9.0.35",
     "@deck.gl/layers": "^9.0.35",
     "@deck.gl/mapbox": "^9.0.35",
+    "@loaders.gl/core": "^4.3.4",
+    "@loaders.gl/parquet": "^4.3.4",
     "@mapbox/mapbox-gl-draw": "^1.4.3",
     "fzstd": "^0.1.1",
     "geotiff": "^2.1.3",
